PREVIEW: Resolve irregular align with editor

--- a/src/App.css
+++ b/src/App.css
@@ -19,9 +19,9 @@ html, body {
   height: 100%;
 }
 
-/* ::-webkit-scrollbar {
+::-webkit-scrollbar {
   display: none;
-} */
+}
 
 .scrollable {
   height: inherit;
@@ -144,7 +144,7 @@ html, body {
   height: 100%;
 }
 .result {
-  padding-top: 20px;
+  /* padding-top: 20px; */
   /* padding-left: 20px; */
   /* padding-right: 20px; */
   /* overflow-x: hidden; */
